--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "temp-blog",
   "version": "0.1.0",
-  "homepage": "https://prasobkumarkp.github.io/temp-demo",
+  "homepage": "https://prasobkumarkp.github.io/user-blog",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
